--- a/dark-gray.css
+++ b/dark-gray.css
@@ -13,7 +13,7 @@
 }
 section {
     background-color:  var(--default-bg-color);
-    font-family: 'Yu Gothic UI';
+    font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", '游ゴシック Medium', 'Yu Gothic Medium', "游ゴシック体", "YuGothic", "メイリオ", "Meiryo", "verdana", sans-serif;
     color: var(--default-color);
 }
 header {
